@@ -1,3 +1,8 @@
+1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* misc.h: For HPUX, include sys/sigevent.h before others.  This
+	avoids warning implicit structure declaration.  Include limits.h.
+
 1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>
 
 	* Makefile.am (ARGP_SRC): New variable.
